got rid of the spinning logo's and fixed alignment for some elements

--- a/Frontend/index.css
+++ b/Frontend/index.css
@@ -19,13 +19,13 @@ background-color: var(--background-color);
     max-width: 90vw;
     margin: auto;
     margin-top: 10vh;
-    transition: transform 1s ease;
+    transition: all .5s ease;
 }
 
 #main:hover{
     border: 2px solid var(--accent-color);
     transform: scale(1.1);
-
+    box-shadow: 0 32px 64px rgba(0, 0, 0, 0.1);
 }
 
 #logo{
@@ -35,13 +35,14 @@ background-color: var(--background-color);
     padding: 1vh;
     border-bottom: 5px solid var(--secondary-color);
     color: var(--text-color);
-    transition: transform 1s ease;
+    transition: all .3s ease;
+    border-radius: 5px;
 
 }
 
 #logo:hover{
     background-color: var(--accent-color);
-    transform: scale(1.3) rotate(360deg);
+    transform: scale(1.1);
     border-bottom: 5px solid var(--primary-color);
 }
 
