--- a/Frontend/results.css
+++ b/Frontend/results.css
@@ -17,13 +17,13 @@ h1{
     background-color: var(--primary-color);
     padding: 1vh;
     border-bottom: 5px solid black;
-    transition: transform .5s ease;
+    transition: all .5s ease;
 
 }
 
 h1:hover{
     background-color: var(--accent-color);
-    transform: scale(1.3) rotate(360deg);
+    transform: scale(1.1);
     border-bottom: 5px solid var(--primary-color);
 }
 
@@ -41,14 +41,13 @@ h1:hover{
     height: 85vh;
     box-sizing: border-box;
     overflow: hidden;
-    transition: transform 1s ease;
-
+    transition: all .5s ease;
 }
 
 #main:hover{
     border: 2px solid var(--accent-color);
-    transform: scale(1.05);
-
+    transform: scale(1.1);
+    box-shadow: 0 32px 64px rgba(0, 0, 0, 0.1);
 }
 
 #resultsDiv{
@@ -69,7 +68,7 @@ h1:hover{
 }
 
 #results{
-    border: 2px solid #ccc;
+    border: 3px solid #ccc;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     flex: 1;
@@ -80,7 +79,7 @@ h1:hover{
     max-width: 45%;
     height: 100%;
     min-height: 200px;
-    transition: transform 1s ease;    
+    transition: all 1s ease;    
 }
 
 #results:hover{
@@ -88,7 +87,7 @@ h1:hover{
 }
 
 #textbox{
-    border: 2px solid #ccc;
+    border: 3px solid #ccc;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 15px;
@@ -98,12 +97,12 @@ h1:hover{
     height: 100%;
     overflow-y: auto;
     box-sizing: border-box; 
-    transition: transform 1s ease;
+    transition: all 1s ease;
 
 }
 
 #textbox:hover{
-    border: 2px solid var(--accent-color);
+    border: 3px solid var(--accent-color);
 
 }
 
@@ -128,7 +127,7 @@ button {
     width: 90%;
     height: auto;
     padding: 12px 15px;
-    transition: transform 0.2s ease;
+    transition: all 0.3s ease;
 }
 
 button:hover {
